# rustmerce

./: .gitignore  Cargo.toml  README.md
database/: init.sql
migrations/2022-07-21-150100_create_products/: up.sql
src/: category.rs  error.rs  lib.rs  main.rs  models.rs  product.rs  schema.rs  storage.rs  tests.rs
src/category/: handlers.rs  store.rs
src/product/: cache.rs  handlers.rs  repo.rs  service.rs  store.rs
