[package]
name = "rustmerce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
deadpool-postgres = "0.10.2"
tokio-postgres = "0.7.6"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"